Revision history for Perl extension App::Info.

0.41

0.40  2004-11-27T19:45:01
      - Eliminated "Odd number of elements in hash assignment" warning when
        creating an App::Info::Handler::Prompt object.
      - Changed SQLite event messages to simply refer to "SQLite" instead
        of "sqlite3 or sqlite".
      - Added new parameters to "new()", along with accompanying accessors to
        collect their values: "search_exe_names", "search_bin_dirs",
        "search_lib_names", "search_so_lib_names", search_lib_dirs",
        "search_inc_names", and "search_inc_dirs". These are array references,
        and their values are used to search for application files on the local
        file system. Users can now override the directories ande files that
        the classes search for with their own values. Subclasses override the
        accessor methods to provide such values.
      - Updated subclases to use the new "search" methods.
      - Added "search_conf_names" and "search_conf_dirs" parameters and
        methods to App::Info::HTTPD::Apache to allow users to affect the
        file names paths used to search for Apache configuration files.
      - Added support for finding iconv on Win32.

0.30  2004-11-20T19:10:55
      - Fixed number of tests to skip in "sqlite_info.t" for systems that
        don't have SQLite installed. Reported by numerous CPAN testers.
      - Fixed carp.t to be compatable with older Perls.
      - Added new C<lib_dirs()> method to App::Info::Util to centrally handle
        the parsing and returning of typical library directories as defined by
        the "libsdirs" and "loclibpth" Config settings.
      - Added /sw/lib to the list of library diretories to search for
        SQLite libraries.
      - Only loading DBI in App::Info::RDBMS::SQLite if a version of
        DBD::SQLite is known to be installed, rather than at compile
        time.
      - Fixed tests in sqlite_info.t to work properly on Windows.
