@@ -1,6 +1,9 @@
 Revision history for Perl extension App::Info.
 
 0.41
+      - Fixed Apache, SQLite, and Iconv tests to pass under Win32.
+      - Fixed "bin_dir()" method for Apache module to return the same
+        directory as "httpd_root()" on Win32.
 
 0.40  2004-11-27T19:45:01
       - Eliminated "Odd number of elements in hash assignment" warning when
